Improved game page styling by making score counter positioning more consistent and fixing issue that caused misalignment of dice and score counter

--- a/dice_game/frontend/static/css/index.css
+++ b/dice_game/frontend/static/css/index.css
@@ -63,6 +63,7 @@ body {
   left: 10%;
   transform: translate(-50%, -50%);
   max-width: 128px;
+  min-width: 128px;
 }
 
 .center-right {
@@ -71,6 +72,7 @@ body {
   left: 90%;
   transform: translate(-50%, -50%);
   max-width: 128px;
+  min-width: 128px;
 }
 
 .bottom-left {
@@ -86,5 +88,7 @@ body {
 }
 
 .score-positioning {
-  transform: translate(65%, 100%);
+  position: absolute;
+  top: 50px;
+  left: 28px;
 }
